--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 /* Header styles */
 .equipe-section {
-    background-color: #A89E9D; /* Couleur de fond distincte */
+    background-color: #A89E9D; 
     padding: 30px 0;
-    width: 100%; /* Pour occuper toute la largeur */
+    width: 100%; 
     box-sizing: border-box;
 }
 
@@ -96,7 +96,7 @@ p {
   margin: 10px 0;
 }
 
-/* Navigation styles */
+ Navigation styles */
 nav {
   background-color: #f2f2f2;
   padding: 10px 0;
@@ -125,7 +125,7 @@ a:hover {
   color: #000;
 }
 
-/* Main content styles */
+ Main content styles */
 main {
   padding: 20px 0;
   text-align: center;
@@ -172,7 +172,7 @@ h2 {
   margin: 5px 0;
 }
 
-/* Image styles */
+ Image styles */
 .image1 {
   width: 100%;
   height: 200px;
@@ -200,24 +200,24 @@ h2 {
 
 #histoire-marque {
     display: flex;
-    flex-wrap: wrap; /* Permettre le retour à la ligne si nécessaire */
+    flex-wrap: wrap; 
     align-items: flex-start;
 }
 
 .texte-histoire {
-    flex: 1; /* Faire en sorte que le texte prenne tout l'espace disponible */
-    margin-right: 20px; /* Ajouter une marge à droite pour séparer l'image du texte */
-    max-width: 800px; /* Ajoutez une largeur maximale pour limiter la largeur du texte */
-    margin: 0 auto; /* Centrez horizontalement le texte en utilisant une marge automatique */
+    flex: 1; 
+    margin-right: 20px; 
+    max-width: 800px; 
+    margin: 0 auto; 
 }
 
 .image-wrapper img {
-    max-width: 100%; /* Pour éviter que l'image ne dépasse de son conteneur */
-    height: auto; /* Pour maintenir le rapport hauteur/largeur de l'image */
-    margin-bottom: 20px; /* Ajouter une marge en bas pour séparer l'image du texte suivant */
+    max-width: 100%; 
+    height: auto; 
+    margin-bottom: 20px; 
 }
 
-/* You can change these colors to match the photo */
+
 header {
   background-color: #F0EAD6;
 }
@@ -239,12 +239,11 @@ footer {
   max-width: 1000px;
   margin: 0 auto;
   display: flex;
-  justify-content: space-between; /* Pour placer les éléments à chaque extrémité */
+  justify-content: space-between; 
   align-items: center;
 }
 
 .footer-info {
-  /* Pas besoin de changer */
 }
 
 .footer-info p {
@@ -255,7 +254,7 @@ footer {
   list-style: none;
   padding: 0;
   margin: 0;
-  text-align: center; /* Centrer les éléments */
+  text-align: center; 
 }
 
 .footer-info ul li {
@@ -273,7 +272,6 @@ footer {
 }
 
 .social-icons {
-  /* Pas besoin de changer */
 }
 
 .social-icons a {
@@ -285,4 +283,4 @@ footer {
   height: 20px;
 }
 
-/* Ajout des styles pour la section d'équipe */
+
